@@ -19,7 +19,6 @@ package org.apache.solr.cloud.api.collections;
 import static org.apache.solr.common.cloud.ZkStateReader.COLLECTION_PROP;
 import static org.apache.solr.common.cloud.ZkStateReader.CORE_NAME_PROP;
 import static org.apache.solr.common.params.CollectionAdminParams.FOLLOW_ALIASES;
-import static org.apache.solr.common.params.CommonAdminParams.ASYNC;
 import static org.apache.solr.common.params.CommonParams.NAME;
 
 import java.io.IOException;
@@ -27,14 +26,13 @@ import java.lang.invoke.MethodHandles;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import org.apache.solr.cloud.api.collections.CollectionHandlingUtils.ShardRequestTracker;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
-import org.apache.solr.common.cloud.ClusterState;
 import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.Replica.State;
@@ -71,7 +69,7 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
 
   @SuppressWarnings("unchecked")
   @Override
-  public void call(ClusterState state, ZkNodeProps message, NamedList<Object> results)
+  public void call(AdminCmdContext adminCmdContext, ZkNodeProps message, NamedList<Object> results)
       throws Exception {
 
     String extCollectionName = message.getStr(COLLECTION_PROP);
@@ -123,7 +121,13 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
             if (incremental) {
               try {
                 incrementalCopyIndexFiles(
-                    backupUri, collectionName, message, results, backupProperties, backupMgr);
+                    adminCmdContext,
+                    backupUri,
+                    collectionName,
+                    message,
+                    results,
+                    backupProperties,
+                    backupMgr);
               } catch (SolrException e) {
                 log.error(
                     "Error happened during incremental backup for collection: {}",
@@ -135,7 +139,13 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
               }
             } else {
               copyIndexFiles(
-                  backupUri, collectionName, message, results, backupProperties, backupMgr);
+                  adminCmdContext,
+                  backupUri,
+                  collectionName,
+                  message,
+                  results,
+                  backupProperties,
+                  backupMgr);
             }
             break;
           }
@@ -158,7 +168,7 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
         backupMgr.downloadConfigDir(configName, cc.getConfigSetService());
       }
 
-      // Save the collection's state. Can be part of the monolithic clusterstate.json or a
+      // Save the collection's state. Can be part of the monolithic clusterstate.json or an
       // individual state.json. Since we don't want to distinguish we extract the state and back it
       // up as a separate json
       DocCollection collectionState =
@@ -275,7 +285,7 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
                     x.getState() != State.DOWN && snapshotMeta.isSnapshotExists(slice.getName(), x))
             .findFirst();
 
-    if (!r.isPresent()) {
+    if (r.isEmpty()) {
       throw new SolrException(
           ErrorCode.SERVER_ERROR,
           "Unable to find any live replica with a snapshot named "
@@ -288,6 +298,7 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
   }
 
   private void incrementalCopyIndexFiles(
+      AdminCmdContext adminCmdContext,
       URI backupUri,
       String collectionName,
       ZkNodeProps request,
@@ -296,7 +307,6 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
       BackupManager backupManager)
       throws IOException {
     String backupName = request.getStr(NAME);
-    String asyncId = request.getStr(ASYNC);
     String repoName = request.getStr(CoreAdminParams.BACKUP_REPOSITORY);
     ShardHandler shardHandler = ccc.newShardHandler();
 
@@ -308,7 +318,7 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
 
     Optional<BackupProperties> previousProps = backupManager.tryReadBackupProperties();
     final ShardRequestTracker shardRequestTracker =
-        CollectionHandlingUtils.asyncRequestTracker(asyncId, ccc);
+        CollectionHandlingUtils.asyncRequestTracker(adminCmdContext, ccc);
 
     Collection<Slice> slices =
         ccc.getZkStateReader().getClusterState().getCollection(collectionName).getActiveSlices();
@@ -340,7 +350,7 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
               slice.getName(), backupManager.getBackupId().getId());
       params.set(CoreAdminParams.SHARD_BACKUP_ID, shardBackupId.getIdAsString());
 
-      shardRequestTracker.sendShardRequest(replica.getNodeName(), params, shardHandler);
+      shardRequestTracker.sendShardRequest(replica, params, shardHandler);
       log.debug("Sent backup request to core={} for backupName={}", coreName, backupName);
     }
     log.debug("Sent backup requests to all shard leaders for backupName={}", backupName);
@@ -434,6 +444,7 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
   }
 
   private void copyIndexFiles(
+      AdminCmdContext adminCmdContext,
       URI backupPath,
       String collectionName,
       ZkNodeProps request,
@@ -442,7 +453,6 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
       BackupManager backupManager)
       throws Exception {
     String backupName = request.getStr(NAME);
-    String asyncId = request.getStr(ASYNC);
     String repoName = request.getStr(CoreAdminParams.BACKUP_REPOSITORY);
     ShardHandler shardHandler = ccc.newShardHandler();
 
@@ -452,7 +462,7 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
       SolrZkClient zkClient = ccc.getZkStateReader().getZkClient();
       snapshotMeta =
           SolrSnapshotManager.getCollectionLevelSnapshot(zkClient, collectionName, commitName);
-      if (!snapshotMeta.isPresent()) {
+      if (snapshotMeta.isEmpty()) {
         throw new SolrException(
             ErrorCode.BAD_REQUEST,
             "Snapshot with name "
@@ -478,13 +488,13 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
         backupName,
         backupPath);
 
-    Collection<String> shardsToConsider = Collections.emptySet();
+    Collection<String> shardsToConsider = Set.of();
     if (snapshotMeta.isPresent()) {
       shardsToConsider = snapshotMeta.get().getShards();
     }
 
     final ShardRequestTracker shardRequestTracker =
-        CollectionHandlingUtils.asyncRequestTracker(asyncId, ccc);
+        CollectionHandlingUtils.asyncRequestTracker(adminCmdContext, ccc);
     Collection<Slice> slices =
         ccc.getZkStateReader().getClusterState().getCollection(collectionName).getActiveSlices();
     for (Slice slice : slices) {
@@ -522,7 +532,7 @@ public class BackupCmd implements CollApiCmds.CollectionApiCommand {
         params.set(CoreAdminParams.COMMIT_NAME, snapshotMeta.get().getName());
       }
 
-      shardRequestTracker.sendShardRequest(replica.getNodeName(), params, shardHandler);
+      shardRequestTracker.sendShardRequest(replica, params, shardHandler);
       log.debug("Sent backup request to core={} for backupName={}", coreName, backupName);
     }
     log.debug("Sent backup requests to all shard leaders for backupName={}", backupName);
