@@ -29,6 +29,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import org.apache.lucene.store.IOContext;
 import org.apache.lucene.store.IndexInput;
 import org.apache.solr.common.SolrException;
@@ -36,7 +37,6 @@ import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.cloud.ClusterState;
 import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.cloud.SolrZkClient;
-import org.apache.solr.common.cloud.ZkMaintenanceUtils;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.ConfigSetService;
@@ -224,8 +224,7 @@ public class BackupManager {
       is.readBytes(arr, 0, (int) is.length());
       // set a default created date, we don't aim at reading actual zookeeper state. The restored
       // collection will have a new creation date when persisted in zookeeper.
-      ClusterState c_state =
-          ClusterState.createFromJson(-1, arr, Collections.emptySet(), Instant.EPOCH, null);
+      ClusterState c_state = ClusterState.createFromJson(-1, arr, Set.of(), Instant.EPOCH, null);
       return c_state.getCollection(collectionName);
     }
   }
@@ -299,7 +298,7 @@ public class BackupManager {
         repository.openInput(sourceDir, ZkStateReader.COLLECTION_PROPS_ZKNODE, IOContext.DEFAULT)) {
       byte[] arr = new byte[(int) is.length()];
       is.readBytes(arr, 0, (int) is.length());
-      zkStateReader.getZkClient().create(zkPath, arr, CreateMode.PERSISTENT, true);
+      zkStateReader.getZkClient().create(zkPath, arr, CreateMode.PERSISTENT);
     } catch (KeeperException | InterruptedException e) {
       throw new IOException(
           "Error uploading file to zookeeper path " + source.toString() + " to " + zkPath,
@@ -317,13 +316,13 @@ public class BackupManager {
             + ZkStateReader.COLLECTION_PROPS_ZKNODE;
 
     try {
-      if (!zkStateReader.getZkClient().exists(zkPath, true)) {
+      if (!zkStateReader.getZkClient().exists(zkPath)) {
         // Nothing to back up
         return;
       }
 
       try (OutputStream os = repository.createOutput(dest)) {
-        byte[] data = zkStateReader.getZkClient().getData(zkPath, null, null, true);
+        byte[] data = zkStateReader.getZkClient().getData(zkPath, null, null);
         os.write(data);
       }
     } catch (KeeperException | InterruptedException e) {
@@ -344,7 +343,7 @@ public class BackupManager {
       // checking for '/' is correct for a directory since ConfigSetService#getAllConfigFiles
       // always separates file paths with '/'
       if (!filePath.endsWith("/")) {
-        if (ZkMaintenanceUtils.isFileForbiddenInConfigSets(filePath)) {
+        if (ConfigSetService.isFileForbiddenInConfigSets(filePath)) {
           log.warn(
               "Not including zookeeper file in backup, as it is a forbidden type: {}", filePath);
         } else {
@@ -385,7 +384,7 @@ public class BackupManager {
       switch (t) {
         case FILE:
           {
-            if (ZkMaintenanceUtils.isFileForbiddenInConfigSets(filePath)) {
+            if (ConfigSetService.isFileForbiddenInConfigSets(filePath)) {
               log.warn(
                   "Not including zookeeper file in restore, as it is a forbidden type: {}", file);
             } else {
