@@ -40,7 +40,6 @@ import java.security.Principal;
 import java.util.ArrayDeque;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Deque;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -85,7 +84,6 @@ import org.apache.solr.client.solrj.response.schema.SchemaResponse;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.cloud.SolrZkClient;
-import org.apache.solr.common.cloud.ZkMaintenanceUtils;
 import org.apache.solr.common.params.CollectionParams.CollectionAction;
 import org.apache.solr.common.params.ConfigSetParams;
 import org.apache.solr.common.params.ConfigSetParams.ConfigSetAction;
@@ -102,13 +100,11 @@ import org.apache.solr.security.AuthorizationContext;
 import org.apache.solr.security.AuthorizationPlugin;
 import org.apache.solr.security.AuthorizationResponse;
 import org.apache.solr.security.BasicAuthPlugin;
-import org.apache.solr.servlet.SolrDispatchFilter;
 import org.apache.solr.util.ExternalPaths;
 import org.apache.zookeeper.CreateMode;
 import org.apache.zookeeper.KeeperException;
 import org.apache.zookeeper.data.Stat;
 import org.junit.After;
-import org.junit.AfterClass;
 import org.junit.Assume;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -125,11 +121,6 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
   public static void setUpClass() throws Exception {
     System.setProperty("managed.schema.mutable", "true");
     configureCluster(1).withSecurityJson(getSecurityJson()).configure();
-  }
-
-  @AfterClass
-  public static void tearDownClass() {
-    System.clearProperty("managed.schema.mutable");
   }
 
   private static ConfigSetService getConfigSetService() {
@@ -171,6 +162,14 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       Create baseConfigNoExists = new Create();
       baseConfigNoExists.setConfigSetName("newConfigSet").setBaseConfigSetName("baseConfigSet");
       verifyException(solrClient, baseConfigNoExists, "Base ConfigSet does not exist");
+
+      // Invalid configset names
+      for (String invalidName :
+          new String[] {"configset!", "configset\"", "-configset", "configset name"}) {
+        Create invalidNameCreate = new Create();
+        invalidNameCreate.setConfigSetName(invalidName).setBaseConfigSetName("_default");
+        verifyException(solrClient, invalidNameCreate, "Invalid configset");
+      }
     }
   }
 
@@ -271,7 +270,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       throws Exception {
     byte[] oldPropsData = null;
     try {
-      oldPropsData = zkClient.getData(path, null, null, true);
+      oldPropsData = zkClient.getData(path, null, null);
     } catch (KeeperException.NoNodeException e) {
       // okay, properties just don't exist
     }
@@ -365,13 +364,11 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     zkClient.create(
         "/configs/myconf/firstDummyFile",
         "first dummy content".getBytes(UTF_8),
-        CreateMode.PERSISTENT,
-        true);
+        CreateMode.PERSISTENT);
     zkClient.create(
         "/configs/myconf/anotherDummyFile",
         "second dummy content".getBytes(UTF_8),
-        CreateMode.PERSISTENT,
-        true);
+        CreateMode.PERSISTENT);
 
     // Checking error when configuration name specified already exists
     ignoreException("already exists");
@@ -389,10 +386,26 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     assertEquals(400l, statusCode);
     assertTrue(
         "Expected file doesnt exist in zk. It's possibly overwritten",
-        zkClient.exists("/configs/myconf/firstDummyFile", true));
+        zkClient.exists("/configs/myconf/firstDummyFile"));
     assertTrue(
         "Expected file doesnt exist in zk. It's possibly overwritten",
-        zkClient.exists("/configs/myconf/anotherDummyFile", true));
+        zkClient.exists("/configs/myconf/anotherDummyFile"));
+
+    // Checking error when configuration name contains invalid characters
+    for (String invalidName : new String[] {"configset!", "-configset"}) {
+      map =
+          postDataAndGetResponse(
+              cluster.getSolrClient(),
+              cluster.getJettySolrRunners().get(0).getBaseUrl().toString()
+                  + "/admin/configs?action=UPLOAD&name="
+                  + invalidName,
+              emptyData,
+              null,
+              false);
+      assertNotNull(map);
+      statusCode = (long) getObjectByPath(map, Arrays.asList("responseHeader", "status"));
+      assertEquals("Expected 400 for invalid configset name: " + invalidName, 400l, statusCode);
+    }
 
     zkClient.close();
     solrClient.close();
@@ -419,18 +432,15 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       ignoreException("Configset upload feature is disabled");
       for (boolean enabled : new boolean[] {true, false}) {
         System.setProperty("solr.configset.upload.enabled", String.valueOf(enabled));
-        try {
-          long statusCode =
-              uploadConfigSet("regular", "test-enabled-is-" + enabled, null, zkClient, v2);
-          assertEquals(
-              "ConfigSet upload enabling/disabling not working as expected for enabled="
-                  + enabled
-                  + ".",
-              enabled ? 0l : 400l,
-              statusCode);
-        } finally {
-          System.clearProperty("solr.configset.upload.enabled");
-        }
+
+        long statusCode =
+            uploadConfigSet("regular", "test-enabled-is-" + enabled, null, zkClient, v2);
+        assertEquals(
+            "ConfigSet upload enabling/disabling not working as expected for enabled="
+                + enabled
+                + ".",
+            enabled ? 0l : 400l,
+            statusCode);
       }
       unIgnoreException("Configset upload feature is disabled");
     }
@@ -450,7 +460,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
 
       assertTrue(
           "managed-schema file should have been uploaded",
-          zkClient.exists("/configs/" + configSetName + "/managed-schema", true));
+          zkClient.exists("/configs/" + configSetName + "/managed-schema"));
     } finally {
       zkClient.close();
     }
@@ -558,15 +568,14 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
           0, uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2, false, false));
       for (String f : extraFiles) {
         assertTrue(
-            "Expecting file " + f + " to exist in ConfigSet but it's gone",
-            zkClient.exists(f, true));
+            "Expecting file " + f + " to exist in ConfigSet but it's gone", zkClient.exists(f));
       }
       assertEquals(
           0, uploadConfigSet(configsetName, configsetSuffix, null, true, true, v2, false, false));
       for (String f : extraFiles) {
         assertFalse(
             "Expecting file " + f + " to be deleted from ConfigSet but it wasn't",
-            zkClient.exists(f, true));
+            zkClient.exists(f));
       }
       assertConfigsetFiles(configsetName, configsetSuffix, zkClient);
     }
@@ -596,11 +605,11 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       assertEquals(
           400, uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2, true, false));
 
-      for (String fileEnding : ZkMaintenanceUtils.DEFAULT_FORBIDDEN_FILE_TYPES) {
+      for (String fileEnding : ConfigSetService.DEFAULT_FORBIDDEN_FILE_TYPES) {
         String f = configPath + "/test." + fileEnding;
         assertFalse(
             "Expecting file " + f + " to not exist, because it has a forbidden file type",
-            zkClient.exists(f, true));
+            zkClient.exists(f));
       }
     }
   }
@@ -791,8 +800,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       assertFalse(
           "New file should not exist, since the trust check did not succeed.",
           zkClient.exists(
-              "/configs/" + configsetName + configsetSuffix + "/test/upload/path/solrconfig.xml",
-              true));
+              "/configs/" + configsetName + configsetSuffix + "/test/upload/path/solrconfig.xml"));
       assertConfigsetFiles(configsetName, configsetSuffix, zkClient);
       unIgnoreException("ConfigSet uploads do not allow cleanup=true when filePath is used.");
     }
@@ -818,7 +826,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
             .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
             .withConnTimeOut(45000, TimeUnit.MILLISECONDS)
             .build()) {
-      for (String fileType : ZkMaintenanceUtils.DEFAULT_FORBIDDEN_FILE_TYPES) {
+      for (String fileType : ConfigSetService.DEFAULT_FORBIDDEN_FILE_TYPES) {
         ignoreException("is forbidden for use in configSets");
         assertEquals(
             "Can't upload a configset file with a forbidden type: " + fileType,
@@ -839,8 +847,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
                     + configsetName
                     + configsetSuffix
                     + "/test/different/path/solrconfig."
-                    + fileType,
-                true));
+                    + fileType));
         unIgnoreException("is forbidden for use in configSets");
       }
     }
@@ -1015,8 +1022,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       List<String> children =
           zkClient.getChildren(
               String.format(Locale.ROOT, "/configs/%s%s", configsetName, configsetSuffixTrusted),
-              null,
-              true);
+              null);
       assertEquals("The configSet should only have one file uploaded.", 1, children.size());
       assertEquals("Incorrect file uploaded.", "solrconfig.xml", children.get(0));
 
@@ -1040,8 +1046,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       children =
           zkClient.getChildren(
               String.format(Locale.ROOT, "/configs/%s%s", configsetName, configsetSuffixUntrusted),
-              null,
-              true);
+              null);
       assertEquals("The configSet should only have one file uploaded.", 1, children.size());
       assertEquals("Incorrect file uploaded.", "solrconfig.xml", children.get(0));
     }
@@ -1054,8 +1059,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     zkClient.getData(
         String.format(Locale.ROOT, "/configs/%s%s/%s", configsetName, configsetSuffix, configFile),
         null,
-        stat,
-        true);
+        stat);
     return stat.getVersion();
   }
 
@@ -1144,22 +1148,20 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       throws KeeperException, InterruptedException, IOException {
     assertTrue(
         "managed-schema.xml file should have been uploaded",
-        zkClient.exists("/configs/" + configSetName + suffix + "/managed-schema.xml", true));
+        zkClient.exists("/configs/" + configSetName + suffix + "/managed-schema.xml"));
     assertArrayEquals(
         "managed-schema.xml file contents on zookeeper are not exactly same as that of the file uploaded in config",
-        zkClient.getData(
-            "/configs/" + configSetName + suffix + "/managed-schema.xml", null, null, true),
+        zkClient.getData("/configs/" + configSetName + suffix + "/managed-schema.xml", null, null),
         readFile("solr/configsets/upload/" + configSetName + "/managed-schema.xml"));
 
     assertTrue(
         "solrconfig.xml file should have been uploaded",
-        zkClient.exists("/configs/" + configSetName + suffix + "/solrconfig.xml", true));
-    byte data[] = zkClient.getData("/configs/" + configSetName + suffix, null, null, true);
+        zkClient.exists("/configs/" + configSetName + suffix + "/solrconfig.xml"));
+    byte data[] = zkClient.getData("/configs/" + configSetName + suffix, null, null);
     // assertEquals("{\"trusted\": false}", new String(data, StandardCharsets.UTF_8));
     assertArrayEquals(
         "solrconfig.xml file contents on zookeeper are not exactly same as that of the file uploaded in config",
-        zkClient.getData(
-            "/configs/" + configSetName + suffix + "/solrconfig.xml", null, null, true),
+        zkClient.getData("/configs/" + configSetName + suffix + "/solrconfig.xml", null, null),
         readFile("solr/configsets/upload/" + configSetName + "/solrconfig.xml"));
   }
 
@@ -1405,7 +1407,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     try (ZipOutputStream zout = new ZipOutputStream(out)) {
       if (Files.isRegularFile(fileOrDirectory)) {
         // Create entries with given file, one for each forbidden endding
-        for (String fileType : ZkMaintenanceUtils.DEFAULT_FORBIDDEN_FILE_TYPES) {
+        for (String fileType : ConfigSetService.DEFAULT_FORBIDDEN_FILE_TYPES) {
           zout.putNextEntry(new ZipEntry("test." + fileType));
 
           try (InputStream in = Files.newInputStream(fileOrDirectory)) {
@@ -1671,12 +1673,12 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
    * the real directory which matches what {@link ZkController} finds and uses to bootstrap ZK in
    * cloud based tests.
    *
-   * <p>This assumes the {@link SolrDispatchFilter#SOLR_CONFIGSET_DEFAULT_CONFDIR_ATTRIBUTE} system
-   * property has not been externally set in the environment where this test is being run -- which
-   * should <b>never</b> be the case, since it would prevent the test-framework from using {@link
+   * <p>This assumes the {@link ConfigSetService#SOLR_CONFIGSET_DEFAULT_CONFDIR} system property has
+   * not been externally set in the environment where this test is being run -- which should
+   * <b>never</b> be the case, since it would prevent the test-framework from using {@link
    * ExternalPaths#DEFAULT_CONFIGSET}
    *
-   * @see SolrDispatchFilter#SOLR_CONFIGSET_DEFAULT_CONFDIR_ATTRIBUTE
+   * @see ConfigSetService#SOLR_CONFIGSET_DEFAULT_CONFDIR
    * @see #beforeSolrTestCase
    * @see ConfigSetService#getDefaultConfigDirPath
    */
@@ -1747,7 +1749,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
 
         @Override
         public Map<String, String> getPromptHeaders() {
-          return Collections.emptyMap();
+          return Map.of();
         }
       };
     }
