@@ -37,17 +37,11 @@ public class TestWrapperModel extends TestRerankBase {
   private static class StubWrapperModel extends WrapperModel {
 
     private StubWrapperModel(String name) {
-      this(name, Collections.emptyList(), Collections.emptyList());
+      this(name, List.of(), List.of());
     }
 
     private StubWrapperModel(String name, List<Feature> features, List<Normalizer> norms) {
-      super(
-          name,
-          features,
-          norms,
-          FeatureStore.DEFAULT_FEATURE_STORE_NAME,
-          features,
-          Collections.emptyMap());
+      super(name, features, norms, FeatureStore.DEFAULT_FEATURE_STORE_NAME, features, Map.of());
     }
 
     @Override
@@ -73,18 +67,14 @@ public class TestWrapperModel extends TestRerankBase {
     // wrapper model with features
     WrapperModel wrapperModelWithFeatures =
         new StubWrapperModel(
-            "testModel",
-            Collections.singletonList(new ValueFeature("val", Collections.emptyMap())),
-            Collections.emptyList());
+            "testModel", Collections.singletonList(new ValueFeature("val", Map.of())), List.of());
     ModelException e = expectThrows(ModelException.class, wrapperModelWithFeatures::validate);
     assertEquals("features must be empty for the wrapper model testModel", e.getMessage());
 
     // wrapper model with norms
     WrapperModel wrapperModelWithNorms =
         new StubWrapperModel(
-            "testModel",
-            Collections.emptyList(),
-            Collections.singletonList(IdentityNormalizer.INSTANCE));
+            "testModel", List.of(), Collections.singletonList(IdentityNormalizer.INSTANCE));
     e = expectThrows(ModelException.class, wrapperModelWithNorms::validate);
     assertEquals("norms must be empty for the wrapper model testModel", e.getMessage());
 
@@ -95,9 +85,7 @@ public class TestWrapperModel extends TestRerankBase {
       LTRScoringModel wrappedModel =
           createMockWrappedModel(
               FeatureStore.DEFAULT_FEATURE_STORE_NAME,
-              Arrays.asList(
-                  new ValueFeature("v1", Collections.emptyMap()),
-                  new ValueFeature("v2", Collections.emptyMap())),
+              Arrays.asList(new ValueFeature("v1", Map.of()), new ValueFeature("v2", Map.of())),
               Arrays.asList(IdentityNormalizer.INSTANCE, IdentityNormalizer.INSTANCE));
       wrapperModel.updateModel(wrappedModel);
     }
@@ -107,9 +95,7 @@ public class TestWrapperModel extends TestRerankBase {
       LTRScoringModel wrappedModel =
           createMockWrappedModel(
               "wrappedFeatureStore",
-              Arrays.asList(
-                  new ValueFeature("v1", Collections.emptyMap()),
-                  new ValueFeature("v2", Collections.emptyMap())),
+              Arrays.asList(new ValueFeature("v1", Map.of()), new ValueFeature("v2", Map.of())),
               Arrays.asList(IdentityNormalizer.INSTANCE, IdentityNormalizer.INSTANCE));
       e = expectThrows(ModelException.class, () -> wrapperModel.updateModel(wrappedModel));
       assertEquals(
@@ -122,7 +108,7 @@ public class TestWrapperModel extends TestRerankBase {
       LTRScoringModel wrappedModel =
           createMockWrappedModel(
               FeatureStore.DEFAULT_FEATURE_STORE_NAME,
-              Collections.emptyList(),
+              List.of(),
               Arrays.asList(IdentityNormalizer.INSTANCE, IdentityNormalizer.INSTANCE));
       e = expectThrows(ModelException.class, () -> wrapperModel.updateModel(wrappedModel));
       assertEquals("no features declared for model testModel", e.getMessage());
@@ -133,10 +119,8 @@ public class TestWrapperModel extends TestRerankBase {
       LTRScoringModel wrappedModel =
           createMockWrappedModel(
               FeatureStore.DEFAULT_FEATURE_STORE_NAME,
-              Arrays.asList(
-                  new ValueFeature("v1", Collections.emptyMap()),
-                  new ValueFeature("v2", Collections.emptyMap())),
-              Collections.emptyList());
+              Arrays.asList(new ValueFeature("v1", Map.of()), new ValueFeature("v2", Map.of())),
+              List.of());
       e = expectThrows(ModelException.class, () -> wrapperModel.updateModel(wrappedModel));
       assertEquals("counted 2 features and 0 norms in model testModel", e.getMessage());
     }
